tests/ui/const-generics/mgca/type_const-mismatched-type-incremental.stderr
error: the literal is not of type `usize`
  --> $DIR/type_const-mismatched-type-incremental.rs:5:23
   |
LL | type const R: usize = 1_i32;
   |                       ^^^^^ expected `usize`, found `i32`

error: the literal is not of type `usize`
  --> $DIR/type_const-mismatched-type-incremental.rs:6:23
   |
LL | type const U: usize = -1_i32;
   |                       ^^^^^^ expected `usize`, found `i32`

error: the literal is not of type `bool`
  --> $DIR/type_const-mismatched-type-incremental.rs:7:22
   |
LL | type const S: bool = 1i32;
   |                      ^^^^ expected `bool`, found `i32`

error: the literal is not of type `bool`
  --> $DIR/type_const-mismatched-type-incremental.rs:8:22
   |
LL | type const T: bool = -1i32;
   |                      ^^^^^ expected `bool`, found `i32`

error: aborting due to 4 previous errors

